_rendered/apps/crowdsec/apps-daemonset-crowdsec-agent.yaml
# Source: crowdsec/charts/crowdsec/templates/agent-daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: crowdsec-agent
  labels:
    k8s-app: crowdsec
    type: agent
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: crowdsec
      type: agent
  template:
    metadata:
      annotations:
        checksum/agent-configmap: 524e841fd2661b639b1cc3aee213e22b04572ed44b8d8c81289d7e16b76bab8c
        checksum/acquis-configmap: 34b208aea1546592bfa8d4067a4b4596935945735894b40645ca0edeb8860608
      labels:
        k8s-app: crowdsec
        type: agent
        version: v1
    spec:
      containers:
      - name: crowdsec-agent
        image: "crowdsecurity/crowdsec:v1.7.8"
        imagePullPolicy: IfNotPresent
        command: ['sh', '-c', 'cp /tmp_config/local_api_credentials.yaml /staging/etc/crowdsec/local_api_credentials.yaml && ./docker_start.sh']
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 500m
            memory: 250Mi
        
        ports:
          - name: metrics
            containerPort: 6060
            protocol: TCP

        

        
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        
        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        
        
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        

        

        securityContext:
          allowPrivilegeEscalation: false
          privileged: false

        volumeMounts:
          - name: crowdsec-config
            mountPath: /tmp_config
          
          
          
          - name: acquis-config-volume
            mountPath: /etc/crowdsec/acquis.yaml
            subPath: acquis.yaml
          - name: varlog
            mountPath: /var/log
            readOnly: true

      terminationGracePeriodSeconds: 30
      volumes:
      - name: acquis-config-volume
        configMap:
          name: acquis-configmap
      - name: crowdsec-config
        emptyDir: {}
      - name: varlog
        hostPath:
          path: /var/log
