_rendered/apps/crowdsec/apps-deployment-crowdsec-appsec.yaml
# Source: crowdsec/charts/crowdsec/templates/appsec-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-appsec
  labels:
    k8s-app: crowdsec
    type: appsec
    version: v1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: crowdsec
      type: appsec
  template:
    metadata:
      annotations:
        checksum/appsec-acquis-configmap: f33b61bb184253747d26367d478fd487fe6552534708b59ed84d02a7c1d66572
      labels:
        k8s-app: crowdsec
        type: appsec
        version: v1
        custom.network/external-ingress: ingress
    spec:
      containers:
      - name: crowdsec-appsec
        image: "crowdsecurity/crowdsec:v1.7.8"
        imagePullPolicy: IfNotPresent
        command: ['sh', '-c', 'cp /tmp_config/local_api_credentials.yaml /staging/etc/crowdsec/local_api_credentials.yaml && ./docker_start.sh']
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 500m
            memory: 250Mi
        ports:
          - name: appsec
            containerPort: 7422
            protocol: TCP
          - name: metrics
            containerPort: 6060
            protocol: TCP

        

        
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        
        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        
        
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /metrics
            port: metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        

        

        securityContext:
          allowPrivilegeEscalation: false
          privileged: false

        volumeMounts:
          - name: crowdsec-config
            mountPath: /tmp_config
          - name: appsec-acquis-config-volume
            mountPath: /etc/crowdsec/acquis.yaml
            subPath: acquis.yaml

      terminationGracePeriodSeconds: 30

      volumes:
      - name: appsec-acquis-config-volume
        configMap:
          name: appsec-acquis-config
      - name: crowdsec-config
        emptyDir: {}
      
      priorityClassName:
