_rendered/apps/crowdsec/service-crowdsec-appsec-service.yaml
# Source: crowdsec/charts/crowdsec/templates/appsec-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-appsec-service
  labels:
    app: crowdsec-appsec-service
spec:
  type: ClusterIP
  ports:
    - port: 6060
      targetPort: 6060
      protocol: TCP
      name: metrics
    - port: 7422
      targetPort: 7422
      protocol: TCP
      name: appsec
  selector:
    k8s-app: crowdsec
    type: appsec
    version: v1
