_rendered/apps/crowdsec/cilium_io-ciliumnetworkpolicy-crowdsec-preset-cnp.yaml
---
# Source: crowdsec/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: crowdsec-preset-cnp
spec:
  endpointSelector: 
    matchLabels:
      k8s-app: crowdsec
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-external
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "api.crowdsec.net"
        - matchName: "blocklists.api.crowdsec.net"
        - matchName: "papi.api.crowdsec.net"
        - matchName: "version.crowdsec.net"
        - matchName: "cdn-hub.crowdsec.net"
        - matchName: "hub-data.crowdsec.net"
    - toEndpoints:
        - matchLabels:
            custom.network/postgresdb: "ingress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
